--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
 * {
     box-sizing: border-box;
@@ -5,7 +6,7 @@
 
 body {
     margin: 0%;
-    
+    font-family: 'Quicksand', sans-serif;
 }
 
 .row:after {
@@ -18,11 +19,18 @@ body {
 
 .cabecera {
     display: flex;
-    background-color: rgba(17, 136, 67, 0.473);
+    background-image: url(../img/banner-2.jpg);
     background-size:cover;
     height:100vh;
     width: 100%; 
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+}
+
+.encabezado {
+    text-align: center;
+    font-size: 80px;
+    margin: 0%;
+    padding: 10%;
+
 }
