--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
 
 * {
     box-sizing: border-box;
+    margin: 0%;
 }
 
 body {
-    margin: 0%;
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -33,4 +33,72 @@ body {
     margin: 0%;
     padding: 10%;
 
+}
+
+.column2 {
+    width: 50%;
+    float: left;
+    
+}
+
+.parrafo1 {
+padding-left: 10%;
+padding-top: 7%;
+padding-right: 12%;
+font-size: 70px;
+
+
+}
+
+.parrafo2 {
+    padding-left: 10%;
+    padding-top: 7%;
+    padding-right: 12%;
+    font-size: 40px;
+
+}
+
+.imagen1 {
+    width: 100%;
+    padding: 10%;
+    padding-left: 2%;
+    
+}
+
+.verde{
+    background-color: rgb(54, 228, 170);
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.column4 {
+    width: 25%;
+    float: left;
+}
+
+.parrafo3{
+    text-align: center;
+    font-size: 70px;
+    padding-bottom: 12%;
+    padding-top: 5%;
+}
+
+.imagenes {
+    width: 100%;
+    padding-top: 5%;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-bottom: 10%;
+}
+
+.texto-imagen {
+    text-align: center;
+    color: black;
+    
+
+}
+
+.imagen2 {
+    width: 100%;
+    padding: 10%;
 }
